--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,12 @@ on:
   push:
     tags:
       - 'v*'
+    branches:
+      - main
   release:
     types: [published]
     branches:
-    - main
+      - main
 
 jobs:
   build:
@@ -27,7 +29,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Upload JARs to release
-      uses: AButler/upload-release-assets@v2.0
+      uses: marvinpinto/action-automatic-releases@latest
       with:
-        files: jdbc/target/*.jar
         repo-token: ${{ secrets.GITHUB_TOKEN }}
+        prerelease: false
+        files: |
+          jdbc/target/*.jar
