--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Upload JARs to release
       uses: marvinpinto/action-automatic-releases@latest
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
         prerelease: false
         files: |
           jdbc/target/*.jar
