--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         prerelease: false
         automatic_release_tag: "latest"
-        title: "Example Release ${{ github.event.release.tag_name }}"
+        title: "Example Release ${GITHUB_REF#refs/tags/}"
         files: |
           jdbc/target/*.jar
