--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: |
+        mvn -B package --file pom.xml
+        echo ${GITHUB_REF#refs/tags/} 
     - name: Upload JARs to release
       uses: marvinpinto/action-automatic-releases@latest
       with:
@@ -37,5 +39,3 @@ jobs:
         title: ${GITHUB_REF#refs/tags/}
         files: |
           jdbc/target/*.jar
-      run: |
-        echo ${GITHUB_REF#refs/tags/} 
