--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         prerelease: false
-        automatic_release_tag: "latest"
-        title: ${GITHUB_REF#refs/tags/}
+        automatic_release_tag: ${GITHUB_REF#refs/tags/}
         files: |
           jdbc/target/*.jar
