--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
     - name: Build with Maven
       run: |
         mvn -B package --file pom.xml
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
+    # - name: Setup upterm session
+    #   uses: lhotari/action-upterm@v1
     - name: Upload JARs to release
       uses: ncipollo/release-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: "jdbc/target/*.jar"
+        artifacts: "BabelfishCompass.bat,BabelfishFeatures.cfg,THIRD-PARTY-LICENSES.txt,target/compass-1.0.jar,LICENSE,NOTICE"
