--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: "BabelfishCompass.zip"
+        artifacts: "BabelfishCompass_${{env.TAG_NAME}}.zip"
