--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,14 @@ jobs:
         mvn -B package --file pom.xml
     # - name: Setup upterm session
     #   uses: lhotari/action-upterm@v1
+    - name: Set env
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Package up release files
       run: |
-        echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        echo $RELEASE_VERSION
+        echo ${{ env.RELEASE_VERSION }}
+        echo BabelfishCompass_${{ env.RELEASE_VERSION }}
+        echo BabelfishCompass_$RELEASE_VERSION
         sudo apt-get install zip
         mkdir BabelfishCompass
         cp BabelfishCompass.bat BabelfishCompass/
