--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -22,17 +21,10 @@ jobs:
     - name: Build with Maven
       run: |
         mvn -B package --file pom.xml
-    # - name: Setup upterm session
-    #   uses: lhotari/action-upterm@v1
-    - name: Set env
+    - name: Set version env variable
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Package up release files
       run: |
-        echo $RELEASE_VERSION
-        echo ${{ env.RELEASE_VERSION }}
-        echo BabelfishCompass_${{ env.RELEASE_VERSION }}
-        echo BabelfishCompass_$RELEASE_VERSION
-        sudo apt-get install zip
         mkdir BabelfishCompass
         cp BabelfishCompass.bat BabelfishCompass/
         cp BabelfishFeatures.cfg BabelfishCompass/
@@ -42,7 +34,6 @@ jobs:
         cp NOTICE BabelfishCompass/
         mv BabelfishCompass/compass-1.0-jar-with-dependencies.jar BabelfishCompass/compass.jar
         zip -r BabelfishCompass_${{ env.RELEASE_VERSION }}.zip BabelfishCompass
-        ls
     - name: Upload JARs to release
       uses: ncipollo/release-action@v1
       with:
