Rename release yml and set draft true

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,4 +38,5 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        draft: true
         artifacts: "BabelfishCompass_${{ env.RELEASE_VERSION }}.zip"
