--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,14 +21,16 @@ jobs:
     - name: Build with Maven
       run: |
         mvn -B package --file pom.xml
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
+    # - name: Setup upterm session
+    #   uses: lhotari/action-upterm@v1
     - name: Set version env variable
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: Set release details env variable
       run: |
-        echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        RELEASE_DETAILS="$(awk -vN=2 'n<N;/^# /{++n}' CHANGELOG.md)"
-        RELEASE_DETAILS="$(sed '${/^# /d;}' <<< "$RELEASE_DETAILS")"
-        echo "RELEASE_DETAILS" >> $GITHUB_ENV
+        echo 'RELEASE_DETAILS<<EOF' >> $GITHUB_ENV
+        RELEASE_DETAIL="$(awk -vN=2 'n<N;/^# /{++n}' CHANGELOG.md)"
+        RELEASE_DETAIL="$(sed '${/^# /d;}' <<< "$RELEASE_DETAIL")"
+        echo 'EOF' >> $GITHUB_ENV
     - name: Package up release files
       run: |
         mkdir BabelfishCompass
