--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,12 +25,13 @@ jobs:
     #   uses: lhotari/action-upterm@v1
     - name: Set version env variable
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: Set release details env variable
+    - name: Get release details
       run: |
-        echo 'RELEASE_DETAILS<<EOF' >> $GITHUB_ENV
-        RELEASE_DETAILS="$(awk -vN=2 'n<N;/^# /{++n}' CHANGELOG.md)" >> $GITHUB_ENV
-        RELEASE_DETAILS="$(sed '${/^# /d;}' <<< "$RELEASE_DETAILS")" >> $GITHUB_ENV
-        echo 'EOF' >> $GITHUB_ENV
+        export RELEASE_DETAILS="$(awk -vN=2 'n<N;/^# /{++n}' CHANGELOG.md)" 
+        export RELEASE_DETAILS="$(sed '${/^# /d;}' <<< "$RELEASE_DETAILS")"
+        printenv RELEASE_DETAILS
+        touch RELEASE.md
+        echo "$RELEASE_DETAILS" > RELEASE.md
     - name: Package up release files
       run: |
         mkdir BabelfishCompass
@@ -46,6 +47,6 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        body: ${{ env.RELEASE_DETAILS }}
+        bodyFile: "RELEASE.md"
         draft: true
         artifacts: "BabelfishCompass_${{ env.RELEASE_VERSION }}.zip"
