--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,10 +28,11 @@ jobs:
     - name: Get release details
       run: |
         export RELEASE_DETAILS="$(awk -vN=2 'n<N;/^# /{++n}' CHANGELOG.md)" 
-        export RELEASE_DETAILS="$(sed '${/^# /d;}' <<< "$RELEASE_DETAILS")"
-        printenv RELEASE_DETAILS
+        export RELEASE_DETAIL="$(sed '${/^# /d;}' <<< "$RELEASE_DETAILS")"
+        printenv RELEASE_DETAIL
         touch RELEASE.md
-        echo "$RELEASE_DETAILS" > RELEASE.md
+        echo "$RELEASE_DETAIL" > RELEASE.md
+        cat RELEASE.md
     - name: Package up release files
       run: |
         mkdir BabelfishCompass
