Get release details

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,11 +28,11 @@ jobs:
     - name: Get release details
       run: |
         export RELEASE_DETAILS="$(awk -vN=2 'n<N;/^# /{++n}' CHANGELOG.md)" 
-        export RELEASE_DETAIL="$(sed '${/^# /d;}' <<< "$RELEASE_DETAILS")"
-        printenv RELEASE_DETAIL
-        touch RELEASE.md
-        echo "$RELEASE_DETAIL" > RELEASE.md
-        cat RELEASE.md
+        export RELEASE_DETAILS="$(sed '${/^# /d;}' <<< "$RELEASE_DETAILS")"
+        printenv RELEASE_DETAILS
+        touch RELEASE_DETAILS.md
+        echo "$RELEASE_DETAILS" > RELEASE_DETAILS.md
+        cat RELEASE_DETAILS.md
     - name: Package up release files
       run: |
         mkdir BabelfishCompass
@@ -48,6 +48,6 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        bodyFile: "RELEASE.md"
+        bodyFile: "RELEASE_DETAILS.md"
         draft: true
         artifacts: "BabelfishCompass_${{ env.RELEASE_VERSION }}.zip"
