correct SCHEMABINDING detection

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -98,6 +98,7 @@ default_classification-Ignored=@@TEXTSIZE
 report_group-Transactions=@@TRANCOUNT
 report_group-Cursors=@@FETCH_STATUS,@@CURSOR_ROWS
 report_group-SET options=@@OPTIONS
+report_group=@@variables
 
 [@@ERROR value]
 supported-1.0.0=0,102,132,133,134,135,136,141,142,153,155,180,217,219,220,232,266,289,293,306,346,352,477,487,506,512,515,517,545,547,550,556,574,628,1034,1049,1051,1205,1505,1715,1752,1765,1768,1776,1778,1801,1946,2627,2714,2732,2747,2787,3609,3623,3701,3723,3726,3728,3729,3732,3902,3903,3914,3930,4514,4708,4712,4901,4920,6401,8003,8004,8007,8009,8011,8016,8018,8023,8028,8029,8031,8032,8037,8043,8047,8050,8057,8058,8106,8107,8115,8134,8143,8152,8159,8179,9441,9451,9809,10610,10727,10733,10793,11555,11700,11702,11703,11705,11706,11708,11709,11717,16901,16902,16903,16915,16916,16948,16950,18456,35100
@@ -403,8 +404,8 @@ report_group=Functions
 
 [Procedure options]
 rule=create_or_alter_procedure
-list=EXTERNAL,ATOMIC NATIVELY COMPILED,ENCRYPTION,RECOMPILE,SCHEMABINDING,WITHOUT SCHEMABINDING,EXECUTE AS OWNER,EXECUTE AS CALLER,EXECUTE AS SELF,EXECUTE AS USER
-supported-1.0.0=SCHEMABINDING
+list=EXTERNAL,ATOMIC NATIVELY COMPILED,SCHEMABINDING,WITHOUT SCHEMABINDING,ENCRYPTION,RECOMPILE,EXECUTE AS OWNER,EXECUTE AS CALLER,EXECUTE AS SELF,EXECUTE AS USER
+supported-1.0.0=WITHOUT SCHEMABINDING
 default_classification-ReviewSemantics=EXECUTE AS OWNER,EXECUTE AS CALLER
 report_group=Procedures
 
@@ -427,7 +428,7 @@ default_classification=ReviewSemantics
 [Function options]
 rule=create_or_alter_function
 list=EXTERNAL,CLR,ATOMIC NATIVELY COMPILED,SCHEMABINDING,WITHOUT SCHEMABINDING,RETURNS NULL ON NULL INPUT,CALLED ON NULL INPUT,ENCRYPTION,INLINE,EXECUTE AS OWNER,EXECUTE AS CALLER,EXECUTE AS SELF,EXECUTE AS USER
-supported-1.0.0=SCHEMABINDING,RETURNS NULL ON NULL INPUT,CALLED ON NULL INPUT
+supported-1.0.0=RETURNS NULL ON NULL INPUT,CALLED ON NULL INPUT,WITHOUT SCHEMABINDING
 default_classification-ReviewSemantics=EXECUTE AS OWNER,EXECUTE AS CALLER
 report_group=Functions
 
@@ -438,6 +439,7 @@ report_group=Functions
 [Trigger options]
 rule=create_or_alter_dml_trigger,create_or_alter_ddl_trigger
 list=EXTERNAL,NATIVE_COMPILATION,SCHEMABINDING,WITHOUT SCHEMABINDING,ENCRYPTION,APPEND,EXECUTE AS OWNER,EXECUTE AS CALLER,EXECUTE AS SELF,EXECUTE AS USER
+supported-1.0.0=WITHOUT SCHEMABINDING
 default_classification-ReviewSemantics=EXECUTE AS OWNER,EXECUTE AS CALLER
 report_group=Triggers
 
@@ -1000,5 +1002,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=b02c2a28
+#file checksum=236b8da9
 #--- end ---------------------------------------------------------------------------
