support ALTER DATABASE ACCELERATED_DATABASE_RECOVERY

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -404,7 +404,7 @@ report_group=Functions
 
 [Procedure options]
 rule=create_or_alter_procedure
-list=EXTERNAL,ATOMIC NATIVELY COMPILED,SCHEMABINDING,WITHOUT SCHEMABINDING,ENCRYPTION,RECOMPILE,EXECUTE AS OWNER,EXECUTE AS CALLER,EXECUTE AS SELF,EXECUTE AS USER
+list=EXTERNAL,ATOMIC NATIVELY COMPILED,ENCRYPTION,RECOMPILE,SCHEMABINDING,WITHOUT SCHEMABINDING,EXECUTE AS OWNER,EXECUTE AS CALLER,EXECUTE AS SELF,EXECUTE AS USER
 supported-1.0.0=WITHOUT SCHEMABINDING
 default_classification-ReviewSemantics=EXECUTE AS OWNER,EXECUTE AS CALLER
 report_group=Procedures
@@ -479,7 +479,7 @@ report_group=Databases
 
 [ALTER DATABASE options]
 rule=alter_database,alter_database_scoped_configuration
-list=SCOPED CONFIGURATION,CURRENT,MODIFY NAME,COLLATE,CATALOG_COLLATION,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY
+list=SCOPED CONFIGURATION,CURRENT,MODIFY NAME,COLLATE,CATALOG_COLLATION,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY,ACCELERATED_DATABASE_RECOVERY
 report_group=Databases    
 
 [Delimited database name]  
@@ -1002,5 +1002,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=236b8da9
+#file checksum=cd75c9cb
 #--- end ---------------------------------------------------------------------------
