user-configurable classification overrides

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -176,7 +176,7 @@ report_group=Built-in functions
 
 [CHECKSUM]
 rule=function_call
-supported-1.0.0=arg1=STAR,SINGLE ARGUMENT,MULTIPLE ARGUMENTS
+#list=STAR,SINGLE ARGUMENT,MULTIPLE ARGUMENTS    #values for validating arg1
 supported-1.0.0=arg1=SINGLE ARGUMENT
 report_group=Built-in functions
 
@@ -476,6 +476,10 @@ rule=create_database
 list=COLLATE,CATALOG_COLLATION,ALLOW_SNAPSHOT_ISOLATION,ANSI_NULLS,ANSI_NULL_DEFAULT,ANSI_PADDING,ANSI_WARNINGS,ARITHABORT,AUTO_CLOSE,AUTO_SHRINK,AUTO_UPDATE_STATISTICS,AUTO_UPDATE_STATISTICS_ASYNC,DB_CHAINING,COMPATIBILITY_LEVEL,CONCAT_NULL_YIELDS_NULL,CONTAINMENT=PARTIAL,CONTAINMENT=NONE,CURSOR_CLOSE_ON_COMMIT,CURSOR_DEFAULT,DATE_CORRELATION_OPTIMIZATION,DELAYED_DURABILITY,DISABLE_BROKER,FILESTREAM,HONOR_BROKER_PRIORITY,MULTI_USER,NUMERIC_ROUNDABORT,PAGE_VERIFY,PARAMETERIZATION,QUERY_STORE,QUOTED_IDENTIFIER,READ_COMMITTED_SNAPSHOT,RECOVERY,RECURSIVE_TRIGGERS,TARGET_RECOVERY_TIME,TRUSTWORTHY
 supported-1.0.0=COLLATE,CONTAINMENT=NONE
 report_group=Databases
+
+[ALTER DATABASE]
+rule=alter_database,alter_database_scoped_configurations
+report_group=Databases  
 
 [ALTER DATABASE options]
 rule=alter_database,alter_database_scoped_configuration
@@ -1002,5 +1006,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=cd75c9cb
+#file checksum=cf8b40ac
 #--- end ---------------------------------------------------------------------------
