Give permissions to Release workflow (#23)
* Add miniscule change to workflow for testing

* Add event push line

* Give workflow permissions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,14 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  actions: write
+  contents: write
+  deployments: write
+  packages: write
+  pull-requests: write
+  repository-projects: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
