improved Mac/Linux support

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -197,6 +197,7 @@ report_group=DDL
 
 [Inline index]
 rule=table_indices,table_type_indices,column_inline_index
+report_group=DDL
 
 [CLUSTERED index]
 rule=create_index,table_constraint
@@ -1006,5 +1007,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=cf8b40ac
+#file checksum=a7d76ef5
 #--- end ---------------------------------------------------------------------------
