better info for roles, DDL triggers; HTML fixes

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -17,7 +17,7 @@
 valid_versions=1.0.0                    # only Babelfish version numbers listed here can be referenced below
 #valid_versions=1.0.0, 1.0.1, 1.2, 2.0  # example: multiple Babelfish versions must be comma-separated
 file_format=1                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Oct-2021                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Nov-2021                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle: 
@@ -50,18 +50,18 @@ file_timestamp=Oct-2021                 # identifies the version of this file, t
 #
 #	[FEATURE_B_EXAMPLE]
 #   rule=grammar_rule_name      # grammar rule corresponding to this feature
-#	supported-1.0.0=ON            # value ON for this feature is supported in v.1.0 and later
+#	supported-1.0.0=ON          # value ON for this feature is supported in v.1.0 and later
 #	                            # other values (like OFF) are not supported in v.1.0
 #	                           
 #	[FEATURE_C_EXAMPLE]
 #   rule=grammar_rule_name      # grammar rule corresponding to this feature
-#	supported-1.0.0=*             # all values for this feature are supported in v.1.0 and later
+#	supported-1.0.0=*           # all values for this feature are supported in v.1.0 and later
 #
 #
 #	[FEATURE_D_EXAMPLE]
 #   rule=grammar_rule_name      # grammar rule corresponding to this feature
 #	list=value1,value2,value3   # only for features where all values need to be listed for validation (like @@variables): all values should be listed here, whether supported or not.
-#	supported-1.0.0=value2        # value2 is supported in v.1.0 and later, others are not supported in 1.0
+#	supported-1.0.0=value2      # value2 is supported in v.1.0 and later, others are not supported in 1.0
 #	supported-1.1=value1        # value1 is supported in v.1.1 and later
 #	supported-1.3-1.4=value3    # supported in version 1.3 and later until 1.4.0 (inclusive), but not 1.4.1 or later
 #	supported-1.3-1.*=value4    # supported in 1.3 and later until 1.99999, but not 2.0 or later
@@ -72,7 +72,7 @@ file_timestamp=Oct-2021                 # identifies the version of this file, t
 #	# feature with specific values of a particular argument: argument#1 = 'arg1', argument#2 = 'arg2', etc.
 #	[FEATURE_E_EXAMPLE]
 #   rule=grammar_rule_name          # grammar rule corresponding to this feature
-#	supported-1.0.0=arg1=value1       # for argument #1 of FEATURE_E_EXAMPLE, value1 is supported in v.1.0 and later (other values are not supported)
+#	supported-1.0.0=arg1=value1     # for argument #1 of FEATURE_E_EXAMPLE, value1 is supported in v.1.0 and later (other values are not supported)
 #	supported-1.1=arg1=value2       # for argument #1 of FEATURE_E_EXAMPLE, value2 is supported in v.1.1 and later
 #	supported-1.3-1.*=arg1=value3   # for argument #1 of FEATURE_E_EXAMPLE, value3 is supported in v.1.3-1.x 
 #	report_group-ABC=value4         # optional, for presentation: report value4 under category 'ABC' 
@@ -958,7 +958,7 @@ report_group=Users
 
 [ALTER SERVER ROLE]
 rule=alter_server_role
-supported-1.0.0=*
+supported-1.0.0=SYSADMIN
 report_group=Users
 
 [Server role options]
@@ -1007,5 +1007,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=a7d76ef5
+#file checksum=5d03d3f6
 #--- end ---------------------------------------------------------------------------
