detect DML as table source

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -14,10 +14,10 @@
 
 # this must always be the first section:
 [Babelfish for T-SQL]
-valid_versions=1.0.0, 1.1.0              # only Babelfish version numbers listed here can be referenced below
+valid_versions=1.0.0, 1.1.0             # only Babelfish version numbers listed here can be referenced below
 #valid_versions=1.0.0, 1.0.1, 1.2, 2.0  # example: multiple Babelfish versions must be comma-separated
 file_format=1                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Dec-2021                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Jan-2022                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle: 
@@ -831,6 +831,11 @@ rule=merge_statement
 list=MERGE,TOP,CTE,OUTPUT,OUTPUT OUTPUT
 report_group=DML
 
+[DML Table Source]
+rule=table_source_item_dml
+list=INSERT,UPDATE,DELETE,MERGE
+report_group=DML
+
 [TRUNCATE TABLE]
 rule=truncate_table
 supported-1.0.0=*
@@ -1053,5 +1058,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=4531e157
+#file checksum=7b2d7f23
 #--- end ---------------------------------------------------------------------------
