improved detection of cross-row variable assignment

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -190,6 +190,17 @@ rule=function_call
 supported-1.0.0=arg1=SINGLE ARGUMENT
 report_group=Built-in functions
 
+[expression AT TIME ZONE]
+rule=expression
+
+[Variable aggregates across rows]
+rule=update_statement,select_statement
+default_classification=ReviewSemantics
+
+[Variable assignment dependency]
+rule=update_statement,select_statement
+default_classification=ReviewSemantics
+
 [TRIGGER_NESTLEVEL with N arguments]
 rule=function_call
 supported-1.1.0=0
@@ -1058,5 +1069,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=7b2d7f23
+#file checksum=8e822766
 #--- end ---------------------------------------------------------------------------
