Support recursive input paths with include and exclude filters (#59)
* Add new -recursive command line arg to process input file paths that are
directories and all of their child directories for valid input files.

* Updates to inputFilesValid and tests for same

* Use PathMatcher instead of the input file name filter to provide file
name globbing for Windows. You can now pass in -include and/or -exclude
along with -recursive to control what files are used for input.

* Try to deal with the rare case of a literal glob character making it
into the command line arguments for input files

* Fix literal glob character tests to run on Windows

* Fix some comments to be more accurate

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
             <version>${antlr.version}</version>
