support for INSTEAD OF triggers on tables in v.1.2.0

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -437,6 +437,7 @@ report_group=Triggers
 [Instead-Of Trigger]
 rule=create_or_alter_dml_trigger
 list=TABLE,VIEW
+supported-1.2.0=TABLE
 report_group=Triggers
 
 [View options]
@@ -1100,5 +1101,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=db1fd68f
+#file checksum=c0804fbf
 #--- end ---------------------------------------------------------------------------
