--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -16,7 +16,7 @@
 [Babelfish for T-SQL]
 valid_versions=1.0.0, 1.1.0, 1.2.0      # only Babelfish version numbers listed here can be referenced below
 file_format=1                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=Mar-2022                 # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Apr-2022                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle: 
@@ -607,6 +607,10 @@ report_group=Built-in functions
 rule=odbc_literal
 report_group=Built-in functions
 
+[ODBC Outer Join]
+rule=odbc_outer_join
+report_group=DML
+
 [Query hint]
 rule=option
 default_classification=Ignored   # all possible values are ignored
@@ -797,12 +801,10 @@ report_group=Encryption
 #--- DML -----
 
 [SELECT..PIVOT]
-# not supported for 1.0
 rule=pivot_clause
 report_group=DML
 
 [SELECT..UNPIVOT]
-# not supported for 1.0
 rule=unpivot_clause
 report_group=DML
 
@@ -823,7 +825,7 @@ report_group=DML
 
 [T-SQL Outer Join operator]
 rule=comparison_operator
-list=LEFT OJ,RIGHT OJn
+list=LEFT OJ,RIGHT OJ
 report_group=Operators
 
 [GROUP BY ROLLUP/CUBE (old syntax)]
@@ -1101,5 +1103,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=c0804fbf
+#file checksum=12a58c39
 #--- end ---------------------------------------------------------------------------
