add support for Babelfish v.1.2.1

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -14,7 +14,7 @@
 
 # this must always be the first section:
 [Babelfish for T-SQL]
-valid_versions=1.0.0, 1.1.0, 1.2.0      # only Babelfish version numbers listed here can be referenced below
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.2.1  # only Babelfish version numbers listed here can be referenced below
 file_format=1                           # version number for format of this .cfg file. This is not expected to change much 
 file_timestamp=Apr-2022                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
@@ -1103,5 +1103,5 @@ rule=system_versioning_options
 rule=conversation_statement
 
 #-----------------------------------------------------------------------------------
-#file checksum=12a58c39
+#file checksum=f570a347
 #--- end ---------------------------------------------------------------------------
