support Babelfish 2.1.1. and 1.3.1

--- a/BabelfishFeatures.cfg
+++ b/BabelfishFeatures.cfg
@@ -14,16 +14,20 @@
 
 # this must always be the first section:
 [Babelfish for T-SQL]
-valid_versions=1.0.0, 1.1.0, 1.2.0, 1.2.1, 1.3.0, 2.1.0 # only Babelfish version numbers listed here can be referenced below
+# only Babelfish version numbers listed here can be referenced the rules below:
+valid_versions=1.0.0, 1.1.0, 1.2.0, 1.2.1, 1.3.0, 1.3.1, 2.1.0, 2.1.1 
+# 1.2.1 is a bugfix release for 1.2.0 (no new T-SQL features supported)
+# 1.3.1 is a bugfix release for 1.3.0 (no new T-SQL features supported)
+# 2.1.1 is a bugfix release for 2.1.0 (no new T-SQL features supported)
 file_format=1                           # version number for format of this .cfg file. This is not expected to change much 
-file_timestamp=28-Jun-2022              # identifies the version of this file, together with the latest Babelfish version supported
+file_timestamp=Jul-2022                 # identifies the version of this file, together with the latest Babelfish version supported
                                         # format: dd-MON-yyyy or MON-yyyy
 
 # Basic principle: 
 #   - if a feature is not listed in this file, then it is supported by Babelfish
 #   - features listed in this file are marked supported in a particular Babelfish version, 
 #   - supported in a range of versions, or not supported at all
-#   - by default, a feature in this file is calssified as 'not supported', unless it is 
+#   - by default, a feature in this file is classified as 'not supported', unless it is 
 #     indicated that it is supported in a particular Babelfish version
 #   - a feature can also be classified as 'review_semantics' or 'review_performance', which 
 #     indicates the user should consider the feature differently from that perspective
@@ -203,6 +207,26 @@ rule=function_call
 supported-1.0.0=arg1=MD5,SHA1,SHA2_256,SHA2_512
 report_group=Built-in functions
 
+[DATEPART]
+rule=function_call
+supported-1.0.0=arg1=D,DAY,DAYOFYEAR,DD,DW,DY,HH,HOUR,ISO_WEEK,ISOWK,ISOWW,M,MCS,MICROSECOND,MILLISECOND,MINUTE,MM,MONTH,MS,N,NANOSECOND,NS,Q,QQ,QUARTER,S,SECOND,SS,TZ,TZOFFSET,WEEK,WEEKDAY,WK,WW,YEAR,YY,YYYY
+report_group=Built-in functions
+
+[DATENAME]
+rule=function_call
+supported-1.0.0=arg1=D,DAY,DAYOFYEAR,DD,DW,DY,HH,HOUR,ISO_WEEK,ISOWK,ISOWW,M,MCS,MICROSECOND,MILLISECOND,MINUTE,MM,MONTH,MS,N,NANOSECOND,NS,Q,QQ,QUARTER,S,SECOND,SS,TZ,TZOFFSET,WEEK,WEEKDAY,WK,WW,YEAR,YY,YYYY
+report_group=Built-in functions
+
+[DATEDIFF]
+rule=function_call
+supported-1.0.0=arg1=D,DAY,DAYOFYEAR,DD,DY,HH,HOUR,M,MCS,MICROSECOND,MILLISECOND,MINUTE,MM,MONTH,MS,N,NANOSECOND,NS,Q,QQ,QUARTER,S,SECOND,SS,WEEK,WK,WW,Y,YEAR,YY,YYYY
+report_group=Built-in functions
+
+[DATEADD]
+rule=function_call
+supported-1.0.0=arg1=D,DAY,DAYOFYEAR,DD,DY,HH,HOUR,M,MCS,MINUTE,MM,MONTH,N,NS,Q,QQ,QUARTER,S,SECOND,SS,W,WEEK,WEEKDAY,WK,WW,Y,YEAR,YY,YYYY
+report_group=Built-in functions
+
 [CHECKSUM]
 rule=function_call
 #list=STAR,SINGLE ARGUMENT,MULTIPLE ARGUMENTS    #values for validating 
@@ -287,7 +311,7 @@ report_group-Triggers=ENABLE TRIGGER,DISABLE TRIGGER
 
 [ALTER INDEX]
 rule=alter_index
-list=REBUILD
+list=REBUILD,DISABLE,REORGANIZE,SET,RESUME,PAUSE,ABORT
 report_group=DDL
 
 [IGNORE_DUP_KEY index]
@@ -1025,6 +1049,9 @@ rule=set_special
 [SET STATISTICS]
 rule=set_special
 
+[SET SHOWPLAN_ALL]
+rule=set_special
+
 [SET OFFSETS]
 rule=set_special
 
@@ -1155,5 +1182,5 @@ list=UPDATE TABVAR VIA CORRELATION IN FUNCTION,DELETE TABVAR VIA CORRELATION IN 
 report_group=Syntax Issues
 
 #-----------------------------------------------------------------------------------
-#file checksum=5d1786bb
+#file checksum=2e3255be
 #--- end ---------------------------------------------------------------------------
